# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    "src/broker-server",
    "src/broker-core",
    "src/admin-server",
    "src/mqtt-broker",
    "src/amqp-broker",
    "src/kafka-broker",
    "src/meta-service",
    "src/cli-command",
    "src/cli-bench",
    "src/delay-message",
    "src/schema-register",
    "src/message-expire",
    "src/grpc-clients",
    "src/cmd",
    "src/common/base",
    "src/common/config",
    "src/common/rocksdb-engine",
    "src/common/metadata-struct",
    "src/common/third-driver",
    "src/common/network-server",
    "src/common/metrics",
    "src/common/security",
    "src/common/rate-limit",
    "src/protocol",
    "src/journal-server",
    "src/journal-client",
    "src/storage-adapter",
    "src/robustmq-macro",
    "tests",
]

resolver = "2"

[workspace.package]
version = "0.1.35"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0.98" }
rustls-pki-types = { version = "1.11.0" }
bindgen = { version = "0.69.5" }
## async lib
futures = "0.3"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "tls12",
    "ring",
] }
rustls = { version = "0.23.23", default-features = false }
rustls-pemfile = "2"
## axum
axum = { version = "0.7.2", features = ["ws", "http1", "http2"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
mysql = "*"
## serde lib
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
humantime-serde = "1.1.1"
## cmd lib
clap-cargo = "0.14.1"
clap = { version = "4.4.7", features = ["derive"] }
## unit test lib
mockall = "0.13.1"
googletest = "0.13.0"
temp-env = "0.3.6"
## text handle lib
regex = "1.10.4"
grep = "0.3.2"
## observability
prometheus = "0.14.0"
prometheus_exporter = "0.8"
prometheus-client = "0.23.1"
## logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "json"] }
tracing-appender = { version = "0.2.0" }
# opentelemetry
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "b6783a10984146c62ceaa6997fef1385d2ee5ae8", features = [
    "trace",
] }
opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "b6783a10984146c62ceaa6997fef1385d2ee5ae8", features = [
    "rt-tokio",
] }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "b6783a10984146c62ceaa6997fef1385d2ee5ae8", features = [
    "grpc-tonic",
] }
# prost
prost = "0.13.2"
prost-build = "0.13.2"
prost-validate = { version = "0.2.6", features = ["derive"] }
prost-validate-build = "0.2.6"
# tonic
tonic = "0.12.3"
tonic-build = "0.12.3"
tonic-web = "0.12.3"
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
# quic
quinn = "0.11.6"
rcgen = "0.13.2"
## other
signal-hook = "0.3.17"
lazy_static = "^1.4"
thiserror = "1"
bytes = { version = "1", features = ["serde"] }
futures-util = "0.3.30"
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
bincode = "1.3.3"
ahash = "0.8.7"
byteorder = "1.5.0"
toml = "0.8.8"
uuid = { version = "1.7.0", features = ["v4"] }
mobc = "0.9.0"
dashmap = { version = "6.1.0", features = ["serde"] }
snowflake = "1.3.0"
reqwest = { version = "0.12.23", features = ["json"] }
rumqttc = "0.24.0"
paho-mqtt = { version = "0.13.3", default-features = false, features = [
    "bundled",
    "ssl",
] }
ipnet = "2.3.0"
os_info = "3.8.2"
openraft = { git = "https://github.com/databendlabs/openraft.git", features = [
    "serde",
    "type-alias",
] }
validator = { version = "0.19", features = ["derive"] }
rand = "0.8.5"
opendal = { version = "0.51", features = ["services-s3"] }
valico = "4.0.0"
apache-avro = { version = "0.17.0" }
protobuf = "3.7.1"
protobuf-codegen = "3.7.1"
protofish = { version = "0.5.2" }
rdkafka-sys = "4.8.0"
rdkafka = { version = "0.37.0" }
crc32fast = "1.4.2"
console-subscriber = "0.4.1"
r2d2_postgres = "0.18.2"
r2d2_mysql = "25.0.0"
r2d2 = "0.8.10"
redis = { version = "0.32.6", features = ["r2d2"] }
md5 = "0.8.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
bcrypt = "0.17.1"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
hex = "0.4.3"

#format
prettytable-rs = "^0.10"
## workspaces members
mqtt-broker = { path = "src/mqtt-broker" }
core- = { path = "src/amqp-broker" }
broker-server = { path = "src/broker-server" }
broker-core = { path = "src/broker-core" }
kafka-broker = { path = "src/kafka-broker" }
delay-message = { path = "src/delay-message" }
meta-service = { path = "src/meta-service" }
schema-register = { path = "src/schema-register" }
message-expire = { path = "src/message-expire" }
cli-command = { path = "src/cli-command" }
cli-bench = { path = "src/cli-bench" }
grpc-clients = { path = "src/grpc-clients" }
journal-server = { path = "src/journal-server" }
journal-client = { path = "src/journal-client" }
storage-adapter = { path = "src/storage-adapter" }
cmd = { path = "src/cmd" }
common-base = { path = "src/common/base" }
common-config = { path = "src/common/config" }
rocksdb-engine = { path = "src/common/rocksdb-engine" }
metadata-struct = { path = "src/common/metadata-struct" }
third-driver = { path = "src/common/third-driver" }
network-server = { path = "src/common/network-server" }
common-metrics = { path = "src/common/metrics" }
common-security = { path = "src/common/security" }
rate-limit = { path = "src/common/rate-limit" }
admin-server = { path = "src/admin-server" }
protocol = { path = "src/protocol" }
robustmq-test = { path = "tests" }
robustmq-proto-build = { git = "https://github.com/robustmq/robustmq-proto.git", branch = "main" }
pprof-monitor = { path = "src/common/pprof-monitor" }
sysinfo = "0.29.10"
chrono = "0.4.41"
chrono-tz = "0.10.3"
# other
tempfile = "3.9.0"
humantime = "2.2.0"
strum = "0.27"
strum_macros = "0.27"
async-stream = "0.3.6"
kafka-protocol = "0.15.1"
governor = { version = "0.10.1" }
pulsar = "6.3.1"
tokio-postgres = "0.7.12"

#pprof
pprof = { version = "0.14.0", features = ["flamegraph"] }

#http
hyper = { version = "1.6.0", features = ["server", "http1"] }
async-trait = "0.1.88"
env_logger = "0.10.0"
local-ip-address = "0.6.1"
macrotest = "1.1.0"
proc-macro2 = "1"
quote = "1"
syn = "2"
trybuild = "1.0"

[profile.dev]
overflow-checks = false
incremental = true

[profile.release]
codegen-units = 1
lto = true
overflow-checks = false
