# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "robustmq-test"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
uuid.workspace = true
protocol.workspace = true
bytes.workspace = true

[dev-dependencies]
common-config.workspace = true
admin-server.workspace = true
broker-core.workspace = true
axum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
common-base.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
journal-client.workspace = true
paho-mqtt.workspace = true
mqtt-broker.workspace = true
grpc-clients.workspace = true
metadata-struct.workspace = true
tracing.workspace = true
tonic.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
bincode.workspace = true
apache-avro.workspace = true
rustls.workspace = true
quinn.workspace = true
rustls-pemfile.workspace = true
network-server.workspace = true
futures-util = { workspace = true }