# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "journal-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
common-base.workspace = true
common-config.workspace = true
dashmap.workspace = true
futures.workspace = true
futures-util.workspace = true
grpc-clients.workspace = true
metadata-struct.workspace = true
prost.workspace = true
protocol.workspace = true
rocksdb-engine.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-web.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
tracing-appender.workspace = true
