# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
axum.workspace = true
bincode.workspace = true
bytes.workspace = true
common-base.workspace = true
futures.workspace = true
kafka-protocol.workspace = true
prost.workspace = true
prost-validate = { workspace = true, features = ["derive"] }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-build.workspace = true
validator.workspace = true

[build-dependencies]
prost-build.workspace = true
prost-validate-build.workspace = true
robustmq-proto-build.workspace = true
tonic-build.workspace = true

[dev-dependencies]
robustmq-test.workspace = true
