# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "robustmq-macro"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
validate-req = []
unstable = ["validate-req"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
async-trait = { version = "0.1.88" }
macrotest = "1.1.0"
prost-validate = { workspace = true, features = ["derive"] }
tonic.workspace = true
trybuild = "1.0"
