# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "admin-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
common-base.workspace = true
common-metrics.workspace = true
mqtt-broker.workspace = true
network-server.workspace = true
grpc-clients.workspace = true
common-config.workspace = true
metadata-struct.workspace = true
broker-core.workspace = true
protocol.workspace = true
schema-register.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tower-http.workspace = true
tower.workspace = true
lazy_static.workspace = true
chrono.workspace = true
rate-limit.workspace = true

[dev-dependencies]
mockall.workspace = true
