[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
axum="0.6.16"

metrics = { path = "../metrics", version = "0.1.0" }
rlog = { path = "../rlog", version = "0.1.0" }