# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "broker-server"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
bytes.workspace = true
axum.workspace = true
thiserror.workspace = true
mqtt-broker.workspace = true
meta-service.workspace = true
tonic.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tonic-web.workspace = true
tokio.workspace = true
common-base.workspace = true
tower.workspace = true
protocol.workspace = true
common-config.workspace = true
openraft.workspace = true
grpc-clients.workspace = true
tracing-appender.workspace = true
delay-message.workspace = true
schema-register.workspace = true
tracing.workspace = true
serde_json.workspace = true
journal-server.workspace = true
pprof-monitor.workspace = true
network-server.workspace = true
admin-server.workspace = true
broker-core.workspace = true
common-metrics.workspace = true
rate-limit.workspace = true
