[package]
name = "broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
thiserror.workspace = true
bytes.workspace = true
protocol.workspace = true
common.workspace = true
flume.workspace = true
tokio-util.workspace = true
futures.workspace =true
serde_json.workspace = true