# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cli-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-base.workspace = true
thiserror.workspace = true
grpc-clients.workspace = true
axum.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
rand.workspace = true
clap.workspace = true
clap-cargo.workspace = true
protocol.workspace = true
tokio.workspace = true
dashmap.workspace = true
prettytable-rs.workspace = true
rumqttc = "0.24.0"
hdrhistogram = "7.5.4"
