[package]
name = "clients"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
bytes.workspace = true
axum.workspace = true
thiserror.workspace = true
protocol.workspace = true
common-base.workspace =true
tonic.workspace = true
lazy_static.workspace =true
tokio.workspace = true
mobc.workspace = true
prost.workspace = true