[package]
name = "cmd"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "robustmq"

[[bin]]
name = "broker-server"
path = "src/broker-server/server.rs"

[[bin]]
name = "storage-engine"
path = "src/storage-engine/server.rs"

[[bin]]
name = "placement-center"
path = "src/placement-center/server.rs"

[[bin]]
name = "robustmq"
path = "src/robust/robust.rs"

[dependencies]
clap = {version="4.4.7",features = [ "derive" ]}
common.workspace = true
lazy_static.workspace = true
tokio.workspace = true
mqtt-broker.workspace = true
placement-center.workspace = true
storage-engine.workspace =true