# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cmd"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "cli-command"

[[bin]]
name = "broker-server"
path = "src/broker-server/server.rs"

[[bin]]
name = "cli-command"
path = "src/cli-command/command.rs"

[[bin]]
name = "cli-bench"
path = "src/cli-bench/bench.rs"

[dependencies]
clap.workspace = true
common-base.workspace = true
common-config.workspace = true
tokio.workspace = true
cli-command.workspace = true
cli-bench.workspace = true
broker-server.workspace = true

[dev-dependencies]
mockall.workspace = true
